fix: left position text alignment

--- a/services/web-app/components/page-nav/page-nav.module.scss
+++ b/services/web-app/components/page-nav/page-nav.module.scss
@@ -18,6 +18,7 @@
   @include breakpoint.breakpoint(lg) {
     position: sticky;
     top: calc(spacing.$spacing-11 + spacing.$spacing-10);
+    margin-left: -(spacing.$spacing-07);
   }
 }
 
